--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,116 @@
-asn1crypto==0.24.0
-astroid==2.3.3
-certifi==2019.11.28
-cffi==1.12.2
+absl-py==0.9.0
+aiohttp==3.6.2
+async-timeout==3.0.1
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.0
+bokeh==2.0.2
+brotlipy==0.7.0
+cachetools==4.0.0
+certifi==2020.6.20
+cffi==1.14.0
 chardet==3.0.4
 colorama==0.4.3
-conda==4.8.3
-conda-package-handling==1.6.0
-cryptography==2.6.1
-idna==2.8
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-menuinst==1.4.16
-pycosat==0.6.3
+cryptography==3.0
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
+google-auth==1.11.2
+google-auth-oauthlib==0.4.1
+grpcio==1.27.2
+idna==2.10
+idna-ssl==1.1.0
+importlib-metadata==1.5.0
+ipykernel==5.1.4
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.16.0
+Jinja2==2.11.1
+joblib==0.14.1
+json5==0.9.4
+jsonschema==3.2.0
+jupyter-client==6.1.0
+jupyter-core==4.6.1
+jupyterlab==2.2.0
+jupyterlab-server==1.2.0
+kiwisolver==1.1.0
+Markdown==3.2.1
+MarkupSafe==1.1.1
+matplotlib==3.1.3
+mistune==0.8.4
+mkl-fft==1.0.14
+mkl-random==1.0.2
+mkl-service==2.0.2
+MouseInfo==0.1.3
+multidict==4.7.5
+nbconvert==5.6.1
+nbformat==5.0.4
+networkx==2.4
+notebook==6.0.3
+numpy==1.16.4
+oauthlib==3.1.0
+olefile==0.46
+open3d-python==0.7.0.0
+packaging==20.3
+pandas==1.0.3
+pandocfilters==1.4.2
+parso==0.6.2
+pickleshare==0.7.5
+Pillow==5.2.0
+plotly==4.8.0
+prometheus-client==0.7.1
+prompt-toolkit==3.0.3
+protobuf==3.11.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.50
 pycparser==2.19
-pylint==2.4.4
-pyOpenSSL==19.0.0
-PySocks==1.6.8
-pywin32==223
-requests==2.21.0
-ruamel-yaml==0.15.46
-six==1.14.0
-tqdm==4.44.1
-typed-ast==1.4.1
-urllib3==1.24.1
+pydub==0.24.1
+pygame==1.9.6
+PyGetWindow==0.0.8
+Pygments==2.6.1
+PyMsgBox==1.0.8
+pyOpenSSL==19.1.0
+pyparsing==2.4.6
+pyperclip==1.8.0
+PyRect==0.1.4
+pyrsistent==0.15.7
+PyScreeze==0.1.26
+PySocks==1.7.1
+python-dateutil==2.8.1
+PyTweening==1.0.3
+pytz==2020.1
+pywin32==227
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==18.1.1
+requests==2.24.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.0
+scikit-learn==0.22.1
+scipy==1.4.1
+Send2Trash==1.5.0
+six==1.12.0
+tb-nightly==2.2.0a20200310
+tensorboard-plugin-wit==1.6.0.post2
+terminado==0.8.3
+testpath==0.4.4
+torch==1.4.0
+torchvision==0.5.0
+tornado==6.0.3
+tqdm==4.43.0
+traitlets==4.3.3
+typing-extensions==3.7.4.1
+urllib3==1.25.10
+wcwidth==0.1.8
+webencodings==0.5.1
+Werkzeug==1.0.0
+widgetsnbextension==3.5.1
 win-inet-pton==1.1.0
 wincertstore==0.2
-wrapt==1.11.2
+yarl==1.4.2
+youtube-dl==2020.7.28
+zipp==2.2.0
